--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,13 +5,13 @@ spring:
 #    username: admin
 #    password: qwer1234
 
-#    url: jdbc:mysql://127.0.0.1:3306/test
-#    username: root
-#    password: qwer1234
-#
-    url : ${DBURL}
-    username : ${DBUSER}
-    password : ${DBPASSWORD}
+    url: jdbc:mysql://127.0.0.1:3306/test
+    username: root
+    password: qwer1234
+
+#    url : ${DBURL}
+#    username : ${DBUSER}
+#    password : ${DBPASSWORD}
 
 
   jpa:
