--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,14 +5,17 @@ spring:
 #    username: admin
 #    password: qwer1234
 
-    url: jdbc:mysql://127.0.0.1:3306/ljj
-    username: root
-    password: qwer1234
+#    url: jdbc:mysql://127.0.0.1:3306/ljj
+#    username: root
+#    password: qwer1234
 
 #    url : ${DBURL}
 #    username : ${DBUSER}
 #    password : ${DBPASSWORD}
 
+    url: jdbc:mysql://db-master-stateful-0.db-stateful-headless:3306/resource_project
+    username: master
+    assword: qwer1234
 
   jpa:
     database: mysql
