--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,29 +1,45 @@
+server:
+  port: 8080
+
 spring:
   datasource:
-    driver-class-name : com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://mydb.cjgeoyu2bayw.eu-north-1.rds.amazonaws.com:3306/resource_project
-#    username: admin
-#    password: qwer1234
+    url: jdbc:mysql://${DB_SERVER}:${DB_PORT:3306}/${DB_NAME}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
 
+
+#spring:
+#  datasource:
+#    driver-class-name : com.mysql.cj.jdbc.Driver
+##    url: jdbc:mysql://mydb.cjgeoyu2bayw.eu-north-1.rds.amazonaws.com:3306/resource_project
+##    username: admin
+##    password: qwer1234
+#
 #    url: jdbc:mysql://127.0.0.1:3306/ljj
 #    username: root
 #    password: qwer1234
-
-#    url : ${DBURL}
-#    username : ${DBUSER}
-#    password : ${DBPASSWORD}
-
-    url: jdbc:mysql://db-master-stateful-0.db-stateful-headless:3306/resource_project
-    username: master
-    assword: qwer1234
-
-  jpa:
-    database: mysql
-    database-platform: org.hibernate.dialect.MySQL5Dialect
-    generate-ddl:  true
-    show-sql: true
-    hibernate:
-      ddl-auto: update
-#      naming:
-#        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-#        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#
+##    url : ${DBURL}
+##    username : ${DBUSER}
+##    password : ${DBPASSWORD}
+#
+#  #    url: jdbc:mysql://db-master-stateful-0.db-stateful-headless:3306/resource_project
+#  #    username: master
+#  #    assword: qwer1234
+#
+#  jpa:
+#    database: mysql
+#    database-platform: org.hibernate.dialect.MySQL5Dialect
+#    generate-ddl:  true
+#    show-sql: true
+#    hibernate:
+#      ddl-auto: update
+##      naming:
+##        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+##        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
