--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name : com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://mydb.cjgeoyu2bayw.eu-north-1.rds.amazonaws.com:3306/resource_project
-#    username: admin
-#    password: qwer1234
+    url: jdbc:mysql://${DBURL}/${DB}
+    username: ${DBUSER}
+    password: ${DBPASSWORD}
 #
 #    url: jdbc:mysql://127.0.0.1:3306/ljj
 #    username: root
@@ -12,10 +12,10 @@ spring:
 #    url : ${DBURL}
 #    username : ${DBUSER}
 #    password : ${DBPASSWORD}
-#
-    url: jdbc:mysql://db-master-stateful-0.db-stateful-headless:3306/test_db
-    username: master
-    password: qwer1234
+
+#    url: jdbc:mysql://db-master-stateful-0.db-stateful-headless:3306/test_db
+#    username: master
+#    password: qwer1234
 
   jpa:
     database: mysql
@@ -24,3 +24,6 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+jwt:
+  secret: mysecret.20231011_.qwer1234.Dkagh1234! # 길어야 함
+  token.expired-time-ms: 2592000000 # 30 days
