--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name : com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${DBURL}/${DB}
-    username: ${DBUSER}
-    password: ${DBPASSWORD}
+#    url: jdbc:mysql://${DBURL}/${DB}
+#    username: ${DBUSER}
+#    password: ${DBPASSWORD}
 #
 #    url: jdbc:mysql://127.0.0.1:3306/ljj
 #    username: root
@@ -13,10 +13,17 @@ spring:
 #    username: root
 #    password: root
 
+    url: jdbc:mysql://mydb.cjgeoyu2bayw.eu-north-1.rds.amazonaws.com:3306/resource_project
+    username: admin
+    password: qwer1234
+
 #  DBURL = "jdbc:mysql://mydb.cjgeoyu2bayw.eu-north-1.rds.amazonaws.com:3306"
 #  DB = "resource_project"
 #  DBUSER = "admin"
 #  DBPASSWORD = "qwer1234"
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 
   jpa:
     database: mysql
@@ -28,3 +35,4 @@ spring:
 jwt:
   secret: mysecret.20231011_.qwer1234.Dkagh1234! # 길어야 함
   token.expired-time-ms: 2592000000 # 30 days
+
