--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name : com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://${DBURL}/${DB}
-#    username: ${DBUSER}
-#    password: ${DBPASSWORD}
+    url: jdbc:mysql://${DBURL}/${DB}
+    username: ${DBUSER}
+    password: ${DBPASSWORD}
 #
 #    url: jdbc:mysql://127.0.0.1:3306/ljj
 #    username: root
@@ -13,9 +13,9 @@ spring:
 #    username: root
 #    password: root
 
-    url: jdbc:mysql://mydb.cjgeoyu2bayw.eu-north-1.rds.amazonaws.com:3306/resource_project
-    username: admin
-    password: qwer1234
+#    url: jdbc:mysql://mydb.cjgeoyu2bayw.eu-north-1.rds.amazonaws.com:3306/resource_project
+#    username: admin
+#    password: qwer1234
 
 #  DBURL = "jdbc:mysql://mydb.cjgeoyu2bayw.eu-north-1.rds.amazonaws.com:3306"
 #  DB = "resource_project"
